test/libsolidity/syntaxTests/pragma/experimental_pragma_empty.sol
pragma experimental;
// ====
// experimental: true
// ----
// SyntaxError 9679: (0-20): Experimental feature name is missing.
